--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-  "name": "ldomain",
+  "name": "dweb",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
     "start": "cd src && tsc -w",
-    "build": "rm -r dist && cd src && tsc -b",
+    "build": "rm -r dist && cd src && tsc -b && npm run copy",
+    "copy": "node ./scripts/query.js",
     "test": "valet colors ./sass/_colors.scss --watch=true"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@builtwithjavascript/oklch-converter": "^0.9.2",
     "@timeax/utilities": "^1.1.1",
+    "color-convert": "^3.0.1",
     "color-parse": "^2.0.2",
     "commander": "^11.1.0",
+    "find-package-json": "^1.2.0",
     "inquirer": "^9.2.20",
     "sass": "^1.77.0"
   },
   "devDependencies": {
+    "@types/find-package-json": "^1.2.6",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.6"
+  },
+  "dweb": {
+    "watch": true,
+    "colors": {
+      "cssRoots": "./styles/vars.css",
+      "css": "./styles/colors.css",
+      "source": "./sass/_colors.scss",
+      "scss": "./scss/colors.scss",
+      "tailwind": true
+    },
+    "mediaQuery": {
+      "breakpoints": {
+        "2xs": "1440px"
+      },
+      "tailwind": "./tailwind/breakpoints.js",
+      "outDir": "./resources/js/Styles/mixins/_query.scss"
+    }
   }
 }
