--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "cd src && tsc -w",
     "build": "rm -r dist && cd src && tsc -b && npm run copy",
     "copy": "node ./scripts/query.js",
+    "prepublishOnly": "npm run build && npm version patch",
     "test": "valet colors ./sass/_colors.scss --watch=true"
   },
   "keywords": [],
@@ -16,11 +17,13 @@
   "dependencies": {
     "@builtwithjavascript/oklch-converter": "^0.9.2",
     "@timeax/utilities": "^1.1.1",
+    "browserslist": "^4.24.4",
     "color-convert": "^3.0.1",
     "color-parse": "^2.0.2",
     "commander": "^11.1.0",
     "find-package-json": "^1.2.0",
     "inquirer": "^9.2.20",
+    "lightningcss": "^1.29.3",
     "sass": "^1.77.0"
   },
   "devDependencies": {
