Add Tailwind and color theme support with OKLCH format
Introduces Tailwind theme merging and color utilities with support for OKLCH color format. Adds new helpers and configuration options for themeKeys and colorFormat, updates SCSS and CSS outputs to use OKLCH, and refactors color config typings. Also updates dependencies and injects new color processing logic for theme-aware CSS generation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
   "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true,
+    "**/.factorypath": true,
     "node_modules": true,
     "scripts": true,
     ".vscode": true,
@@ -8,13 +17,14 @@
     ".gitattributes": true,
     ".gitignore": true,
     "colors.theme.json": true,
-    "dist": true,
     "package-lock.json": true,
     "tailwind": true,
     "test.js": true,
     "resources": true,
     "styles": true,
     "src\\tsconfig.json": true,
-    "scss": true
-  }
+    "scss": true,
+    "dist": true
+  },
+  "explorerExclude.backup": {}
 }
