--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "color-convert": "^3.0.1",
     "color-parse": "^2.0.2",
     "commander": "^11.1.0",
+    "culori": "^4.0.2",
     "find-package-json": "^1.2.0",
     "inquirer": "^9.2.20",
     "lightningcss": "^1.29.3",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "sass": "^1.77.0"
   },
   "devDependencies": {
+    "@types/culori": "^4.0.0",
     "@types/find-package-json": "^1.2.6",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.6"
