Refactor SCSS compiler with beacon and block ordering
Enhanced the SCSS-to-CSS pipeline by adding support for &<...> beacon path resolution, block reordering for @forward/@use/@import, and improved configuration handling. Refactored file processing, watcher, and CLI registration for better maintainability and extensibility. Updated Lightning CSS integration and added more robust ignore pattern matching.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rm -r dist && cd src && tsc -b && npm run copy",
     "copy": "node ./scripts/query.js",
     "prepublishOnly": "npm run build && npm version patch",
-    "test": "valet colors ./sass/_colors.scss --watch=true"
+    "test": "valet colors ./sass/_colors.scss --watch=true",
+    "download": "npm i -g @timeax/valet@latest"
   },
   "keywords": [],
   "author": "",
