--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "find-package-json": "^1.2.0",
     "inquirer": "^9.2.20",
     "lightningcss": "^1.29.3",
+    "picomatch": "^4.0.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "sass": "^1.77.0"
